--- a/casita-s/templates/index.html
+++ b/casita-s/templates/index.html
@@ -21,23 +21,57 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
 
     <title>Casita's</title>
   </head>
+ <style>
+      .image-container {
+      position: relative;
+      width: 100%; /* Set maximum width of the container */
+      margin: 0 auto; /* Center the container */
+      margin-bottom: -3rem; 
+    }
 
+      .image-container img {
+      margin-top: -9rem;  
+      width: 100%; /* Make image responsive */
+      height: auto; /* Maintain aspect ratio */
+    }
+
+      .nav-link {
+        margin: 0rem 0.2rem;
+        background-color: #ffc100;
+        border-radius: .5rem;
+      }
+
+      .nav-link :hover {  
+        color: black !important;
+        text-decoration: underline !important;
+      }
+
+      .navbar-toggler {
+        background-color: #ffc100;
+        border-radius: .5rem;
+      }
+
+      body {
+        font-family: "DM Sans", sans-serif;
+      }
+ </style>
   <body
-  style = 
-  "background-image: url(images/bg1.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  "
   >
     <!--Navbar class is the actual navbar, with the light(remove underline) and the size-->
 
-    <nav
+    
+<div class="image-container">
+  <nav
       class="navbar navbar-expand-lg navbar-light d-flex justify-content-between"
     >
       <a class="navbar-brand" href="/">
@@ -45,7 +79,7 @@
           src="images/logo.png"
           alt="casita's logo"
           class="img-fluid"
-          style="max-height: 60px"  
+          style="max-height: 7rem; margin: auto"  
         />
       </a>
 
@@ -80,38 +114,43 @@
       </div>
       <!--UP TO HERE-->
     </nav>
-
-    <div class="container-fluid mb-3">
-      <div class = "row p-4">
-        <div class = "col">
-            <h1 class = "text-center text-white" style = "text-shadow: 2px 2px 4px rgba(0,0,0,0.5);"> Casita's</h1>
-         
-        </div>
-      </div>
+  <img src="images/bg2.jpg" alt="Background Image" />
 </div>
-      
       <div class = "container-fluid">
-        <div class = "row mt-5 p-3" style = "background-color: #cc0000;">
+        <div class = "row mt-5 p-3" style = "background-color: #c0000b;">
 
             <div class = "col-sm-4">
               <img src = "images/nachoCharac.png" class = "img-fluid" alt = "nacho character"> </img>
             </div>
 
             <div class = "col-sm-4 mt-5 p-5 text-center align-items-center">
-              <h3 class = "text-white"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h3>
+              <h2 class = "text-white" style="font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;"> "Experience the joy and warmth of Mexican cuisine, where every dish is a celebration of culture and flavor."</h2>
             </div>
 
             <!-- PUT IT HERE -->
-            <div class = "col-sm-4">
-              <div class = "card">
-                <img src = "images/Photo-02.jpg" alt = "photo-2"></img>
-
-              </div>
-            </div>
-
+              <div class="img-fluid" style="width: 26rem; height: 23rem; object-fit: scale-down; margin-top: 2rem; margin-left: 2rem;">
+                  <img src = "images/food3.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: 8rem; left: 5rem" alt = "food-3"></img>
+                  <img src = "images/food2.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 15rem; width: auto; position: relative; top: -15rem;" talt = "food-2"></img>
+                  <img src = "images/food1.jpg" style="border-radius: .5rem; border: solid 0.2rem white; max-height: 10rem; width: auto; position: relative; top: -15rem; left: 0.85rem;" alt = "food-1"></img>
+                </div>
           </div>
 
         </div>
+        <div class = "container-fluid">
+          <div class="row p-3" style="background-color: #e17a09; background-image: url(images/banner.png); background-repeat: repeat-x; background-position: top center; background-size: 20rem;">
+
+            <div class="col-sm-8 mt-5 p-5 text-center align-items-center">
+                <h2 class="text-white" style="font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;">MEXICAN Cuisine</h2>
+                <h2 class="text-white" style="margin-top: 4 rem; font-weight: bold; text-shadow: 0.075rem 0.075rem .8rem black;">"Explore a rich tapestry of flavors, colors, and traditions with our diverse selection of authentic Mexican dishes, crafted to delight your senses."</h2>
+            </div>
+        
+            <div class="col-sm-4" style="margin-top: 2rem;">
+                <img src="images/foodnobg.png" class="img-fluid" alt="nacho character" style="max-height: 40rem;">
+            </div>
+        
+        </div>
+  
+          </div>
 
       </div>
 
